--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="conatiner">
       <header>
-        <button class="again">Start playing</button>
+        <button class="again">Restart The Game</button>
         <h3>Guest number (1 - 20)</h3>
       </header>
       <h2>Guess the number</h2>
@@ -18,7 +18,7 @@
       <main>
         <section class="left">
           <p class="message">Start guessing the number...</p>
-          <p class="label-score">🏆 Score: <span class="score">5</span></p>
+          <p class="label-score">🏆 Attempts: <span class="score">5</span></p>
           <p class="label-highscore">
             🙋‍♂️ Highscore: <span class="highscore">0</span>
           </p>
